force-app/main/default/objects/Review__c/fields/Action_Plan_Steps__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Steps__c</fullName>
    <label>Action Plan Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>