force-app/main/default/objects/Review__c/fields/Call_1_Example_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_1_Example_Link__c</fullName>
    <formula>Hyperlink(Call_Example_1__c,&quot;Listen to Example 1&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call 1 Example Link</label>
    <type>Text</type>
</CustomField>