force-app/main/default/objects/Review__c/fields/Call_2_Example_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_2_Example_Link__c</fullName>
    <formula>Hyperlink( Call_Example_2__c ,&quot;Listen to Example 2&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call 2 Example Link</label>
    <type>Text</type>
</CustomField>