force-app/main/default/objects/Review__c/fields/Call_3_Example_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_3_Example_Link__c</fullName>
    <formula>Hyperlink( Call_Example_3__c ,&quot;Listen to Example 3&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call 3 Example Link</label>
    <type>Text</type>
</CustomField>