force-app/main/default/objects/Review__c/fields/Call_Example_1__c.field-meta.xml
<CustomField>
    <fullName>Call_Example_1__c</fullName>
    <label>Call Example 1</label>
    <type>Url</type>
</CustomField>