force-app/main/default/objects/Review__c/fields/Call_Example_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Call_Example_1_Description__c</fullName>
    <label>Call Example 1 Description</label>
    <type>TextArea</type>
</CustomField>