force-app/main/default/objects/Review__c/fields/Call_Example_2__c.field-meta.xml
<CustomField>
    <fullName>Call_Example_2__c</fullName>
    <label>Call Example 2</label>
    <type>Url</type>
</CustomField>