force-app/main/default/objects/Review__c/fields/Call_Example_3__c.field-meta.xml
<CustomField>
    <fullName>Call_Example_3__c</fullName>
    <label>Call Example 3</label>
    <type>Url</type>
</CustomField>