force-app/main/default/objects/Review__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Contact</relationshipLabel>
    <relationshipName>Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>