force-app/main/default/objects/Review__c/fields/Current_Info_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Current_Info_Obtained__c</fullName>
    <label>Current Info Obtained %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>