force-app/main/default/objects/Review__c/fields/Email_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Email_Salutation__c</fullName>
    <label>Email Salutation</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>