force-app/main/default/objects/Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Connectivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>