force-app/main/default/objects/Review__c/fields/Previous_Agent_Not_Reached__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agent_Not_Reached__c</fullName>
    <label>Previous Agent Not Reached %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>