force-app/main/default/objects/Review__c/fields/Previous_Appt__c.field-meta.xml
<CustomField>
    <fullName>Previous_Appt__c</fullName>
    <label>Previous Appt %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>