force-app/main/default/objects/Review__c/fields/Previous_Off_lined_Call__c.field-meta.xml
<CustomField>
    <fullName>Previous_Off_lined_Call__c</fullName>
    <label>Previous Off-lined Call %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>